--- a/tests/integration/targets/vmware_guest_disk/tasks/main.yml
+++ b/tests/integration/targets/vmware_guest_disk/tasks/main.yml
@@ -138,110 +138,113 @@
      that:
        - test_custom_IoLimit_shares is changed
 
-- name: Update disk for custom IO limits in IO Limits
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: false
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - size_gb: 2
-        scsi_controller: 2
-        state: present
-        unit_number: 4
-        iolimit:
-          limit: 1500
-          shares:
-            level: custom
-            level_value: 1305
-  register: test_custom_IoLimit
+# TODO: vcsim does not support reconfiguration of disk mode, fails with types.InvalidDeviceSpec
+- when: vcsim is not defined
+  block:
+    - name: Update disk for custom IO limits in IO Limits
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - size_gb: 2
+            scsi_controller: 2
+            state: present
+            unit_number: 4
+            iolimit:
+              limit: 1500
+              shares:
+                level: custom
+                level_value: 1305
+      register: test_custom_IoLimit
 
-- debug:
-    msg: "{{ test_custom_IoLimit }}"
+    - debug:
+        msg: "{{ test_custom_IoLimit }}"
 
-- name: assert that changes were made
-  assert:
-     that:
-       - test_custom_IoLimit is changed
+    - name: assert that changes were made
+      assert:
+         that:
+           - test_custom_IoLimit is changed
 
-- name: Update disk for shares of IO limits
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: false
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - size_gb: 3
-        scsi_controller: 2
-        state: present
-        unit_number: 4
-        iolimit:
-          limit: 1500
-          shares:
-            level: low
-  register: test_shares_IoLimit
+    - name: Update disk for shares of IO limits
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - size_gb: 3
+            scsi_controller: 2
+            state: present
+            unit_number: 4
+            iolimit:
+              limit: 1500
+              shares:
+                level: low
+      register: test_shares_IoLimit
 
-- debug:
-    msg: "{{ test_shares_IoLimit }}"
+    - debug:
+        msg: "{{ test_shares_IoLimit }}"
 
-- name: assert that changes were made
-  assert:
-     that:
-       - test_shares_IoLimit is changed
+    - name: assert that changes were made
+      assert:
+         that:
+           - test_shares_IoLimit is changed
 
-- name: Update disk for shares and IoLimits of IO limits
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: false
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - size_gb: 4
-        scsi_controller: 2
-        state: present
-        unit_number: 4
-        iolimit:
-          limit: 1507
-          shares:
-            level: high
-  register: test_shares_IoLimits
+    - name: Update disk for shares and IoLimits of IO limits
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - size_gb: 4
+            scsi_controller: 2
+            state: present
+            unit_number: 4
+            iolimit:
+              limit: 1507
+              shares:
+                level: high
+      register: test_shares_IoLimits
 
-- debug:
-    msg: "{{ test_shares_IoLimits }}"
+    - debug:
+        msg: "{{ test_shares_IoLimits }}"
 
-- name: assert that changes were made
-  assert:
-     that:
-       - test_shares_IoLimits is changed
+    - name: assert that changes were made
+      assert:
+         that:
+           - test_shares_IoLimits is changed
 
-- name: remove disks without destroy file
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: false
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - state: "absent"
-        scsi_controller: 0
-        unit_number: 4
-        destroy: false
-  register: test_remove_without_destroy
+    - name: remove disks without destroy file
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - state: "absent"
+            scsi_controller: 0
+            unit_number: 4
+            destroy: false
+      register: test_remove_without_destroy
 
-- debug:
-    msg: "{{ test_remove_without_destroy }}"
+    - debug:
+        msg: "{{ test_remove_without_destroy }}"
 
-- name: assert that changes were made
-  assert:
-    that:
-      - test_remove_without_destroy is changed
+    - name: assert that changes were made
+      assert:
+        that:
+          - test_remove_without_destroy is changed
 
 - name: re-create disk with valid disk mode
   vmware_guest_disk:
@@ -259,7 +262,7 @@
         size_gb: 1
         state: present
         type: eagerzeroedthick
-        unit_number: 4
+        unit_number: 8
   register: test_recreate_disk
 
 - debug:
@@ -327,31 +330,33 @@
     that:
       - not(test_create_disk_sharing_invalid is changed)
 
-- name: remove disk with destroy file
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: false
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - state: "absent"
-        scsi_controller: 0
-        unit_number: 3
-        destroy: true
-      - state: "absent"
-        scsi_controller: 0
-        unit_number: 4
-  register: test_remove_with_destroy
+- when: vcsim is not defined
+  block:
+    - name: remove disk with destroy file
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - state: "absent"
+            scsi_controller: 0
+            unit_number: 3
+            destroy: true
+          - state: "absent"
+            scsi_controller: 0
+            unit_number: 4
+      register: test_remove_with_destroy
 
-- debug:
-    msg: "{{ test_remove_with_destroy }}"
+    - debug:
+        msg: "{{ test_remove_with_destroy }}"
 
-- name: assert that changes were made
-  assert:
-    that:
-      - test_remove_with_destroy is changed
+    - name: assert that changes were made
+      assert:
+        that:
+          - test_remove_with_destroy is changed
 
 - name: create new disk with SATA controller
   vmware_guest_disk:
@@ -380,34 +385,6 @@
     that:
       - test_create_sata_disk is changed
 
-- name: re-configure SATA disk
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: no
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - disk_mode: "independent_nonpersistent"
-        controller_type: 'sata'
-        controller_number: 1
-        unit_number: 3
-        size_gb: 2
-        state: present
-        shares:
-          level: custom
-          level_value: 1200
-  register: test_reconfig_sata_disk
-
-- debug:
-    msg: "{{ test_reconfig_sata_disk }}"
-
-- name: assert that changes were made
-  assert:
-    that:
-      - test_reconfig_sata_disk is changed
-
 - name: create new disk with NVMe controller
   vmware_guest_disk:
     hostname: "{{ vcenter_hostname }}"
@@ -434,35 +411,6 @@
   assert:
     that:
       - test_create_nvme_disk is changed
-
-- name: re-configure NVMe disk
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: no
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - controller_type: 'nvme'
-        controller_number: 0
-        unit_number: 1
-        size_gb: 2
-        state: present
-        iolimit:
-          limit: 1507
-          shares:
-            level: custom
-            level_value: 1000
-  register: test_reconfig_nvme_disk
-
-- debug:
-    msg: "{{ test_reconfig_nvme_disk }}"
-
-- name: assert that changes were made
-  assert:
-    that:
-      - test_reconfig_nvme_disk is changed
 
 - name: create 2 new disks on existing SATA controller and NVMe controller
   vmware_guest_disk:
@@ -498,31 +446,90 @@
     that:
       - test_create_two_disks is changed
 
-- name: remove SATA and NVMe disks
-  vmware_guest_disk:
-    hostname: "{{ vcenter_hostname }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    datacenter: "{{ dc1 }}"
-    validate_certs: no
-    name: "{{ virtual_machines[0].name }}"
-    disk:
-      - state: "absent"
-        controller_type: 'sata'
-        controller_number: 1
-        unit_number: 3
-        destroy: false
-      - state: "absent"
-        controller_type: 'nvme'
-        controller_number: 0
-        unit_number: 1
-        destroy: true
-  register: test_remove_sata_nvme_disk
+- when: vcsim is not defined
+  block:
+    - name: re-configure SATA disk
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - disk_mode: "independent_nonpersistent"
+            controller_type: 'sata'
+            controller_number: 1
+            unit_number: 3
+            size_gb: 2
+            state: present
+            shares:
+              level: custom
+              level_value: 1200
+      register: test_reconfig_sata_disk
 
-- debug:
-    msg: "{{ test_remove_sata_nvme_disk }}"
+    - debug:
+        msg: "{{ test_reconfig_sata_disk }}"
 
-- name: assert that changes were made
-  assert:
-    that:
-      - test_remove_sata_nvme_disk is changed
+    - name: assert that changes were made
+      assert:
+        that:
+          - test_reconfig_sata_disk is changed
+
+    - name: re-configure NVMe disk
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - controller_type: 'nvme'
+            controller_number: 0
+            unit_number: 1
+            size_gb: 2
+            state: present
+            iolimit:
+              limit: 1507
+              shares:
+                level: custom
+                level_value: 1000
+      register: test_reconfig_nvme_disk
+
+    - debug:
+        msg: "{{ test_reconfig_nvme_disk }}"
+
+    - name: assert that changes were made
+      assert:
+        that:
+          - test_reconfig_nvme_disk is changed
+
+    - name: remove SATA and NVMe disks
+      vmware_guest_disk:
+        hostname: "{{ vcenter_hostname }}"
+        username: "{{ vcenter_username }}"
+        password: "{{ vcenter_password }}"
+        datacenter: "{{ dc1 }}"
+        validate_certs: no
+        name: "{{ virtual_machines[0].name }}"
+        disk:
+          - state: "absent"
+            controller_type: 'sata'
+            controller_number: 1
+            unit_number: 3
+            destroy: false
+          - state: "absent"
+            controller_type: 'nvme'
+            controller_number: 0
+            unit_number: 1
+            destroy: true
+      register: test_remove_sata_nvme_disk
+
+    - debug:
+        msg: "{{ test_remove_sata_nvme_disk }}"
+
+    - name: assert that changes were made
+      assert:
+        that:
+          - test_remove_sata_nvme_disk is changed
