--- a/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
+++ b/tests/integration/targets/vmware_dvs_portgroup/tasks/main.yml
@@ -519,3 +519,113 @@
         state: absent
         switch_name: dvswitch_0001
       register: dvs_result_0001
+
+    - name: Integration test a dvPortGroup name with special characters
+      block:
+        - name: Create dvSwitch with special characters
+          vmware_dvswitch:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            datacenter: "{{ dc1 }}"
+            switch: 'dvSwitch\/%'
+            version: 6.5.0
+            mtu: 9000
+            uplink_quantity: 1
+            state: present
+          register: create_dvswitch_with_special_characters_result
+
+        - assert:
+            that:
+              - create_dvswitch_with_special_characters_result.changed is sameas true
+
+        - name: Create dvPortGroup with special characters
+          vmware_dvs_portgroup:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            switch_name: 'dvSwitch\/%'
+            portgroup_name: 'dvportgroup\/%'
+            vlan_id: 1
+            num_ports: 8
+            portgroup_type: earlyBinding
+            state: present
+          register: create_dvportgroup_with_special_characters_result
+
+        - assert:
+            that:
+              - create_dvportgroup_with_special_characters_result.changed is sameas true
+
+        - name: Create dvPortGroup with special characters(idempotency check)
+          vmware_dvs_portgroup:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            switch_name: 'dvSwitch\/%'
+            portgroup_name: 'dvportgroup\/%'
+            vlan_id: 1
+            num_ports: 8
+            portgroup_type: earlyBinding
+            state: present
+          register: create_dvportgroup_with_special_characters_idempotency_check_result
+
+        - assert:
+            that:
+              - create_dvportgroup_with_special_characters_idempotency_check_result.changed is sameas false
+
+        - name: Delete dvPortGroup with special characters
+          vmware_dvs_portgroup:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            switch_name: 'dvSwitch\/%'
+            portgroup_name: 'dvportgroup\/%'
+            vlan_id: 1
+            num_ports: 8
+            portgroup_type: earlyBinding
+            state: absent
+          register: delete_dvportgroup_with_special_characters_result
+
+        - assert:
+            that:
+              - delete_dvportgroup_with_special_characters_result.changed is sameas true
+
+        - name: Delete dvPortGroup with special characters(idempotency check)
+          vmware_dvs_portgroup:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            switch_name: 'dvSwitch\/%'
+            portgroup_name: 'dvportgroup\/%'
+            vlan_id: 1
+            num_ports: 8
+            portgroup_type: earlyBinding
+            state: absent
+          register: delete_dvportgroup_with_special_characters_idempotency_check_result
+
+        - assert:
+            that:
+              - delete_dvportgroup_with_special_characters_idempotency_check_result.changed is sameas false
+
+        - name: Delete dvSwitch with special characters
+          vmware_dvswitch:
+            hostname: "{{ vcenter_hostname }}"
+            username: "{{ vcenter_username }}"
+            password: "{{ vcenter_password }}"
+            validate_certs: false
+            datacenter: "{{ dc1 }}"
+            switch: 'dvSwitch\/%'
+            version: 6.5.0
+            mtu: 9000
+            uplink_quantity: 1
+            state: absent
+          register: delete_dvswitch_with_special_characters_result
+
+        - assert:
+            that:
+              - delete_dvswitch_with_special_characters_result.changed is sameas true
